ideax/static/css/blog.css
html {
      height: 100%;
    }

    body {
      min-height: 100%;
      display: flex;
      flex-direction: column;
    }

    .content {
      flex: 1;
    }

/*Main header*/
/*Cabecalho principal*/

.main-header{
  background-color: #46586A;
  border: #132537 solid 1px;
  color: #E6E6E6;
  font-family: 'Open Sans', sans-serif;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-between;
  padding: 0 20px;
  min-height: 80px;
  -webkit-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.75);
  -moz-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.75);
  box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.75);
  //margin-bottom: 50px;
}

.main-header .title{
  margin: 0;
  font-size: 4em;
}

.title img{
  height: auto;
  width: 160px;
}

.main-header a{
  color: #ffffff;
  text-decoration: none;
}

.main-header a:hover{
  color: #ffffff;
  text-decoration: none;
  color: #E6E6E6;
  transition: all 0.6s;
}


.main-header .login a{
  font-size: 2.5em;
  color: white;
}

.main-header .login a:hover{
  color: #E6E6E6;
}

.menu{
  display: flex;
  width: 40%;
  justify-content: space-between;
}

/*Secondary menu*/
/*Menu secundário*/

nav.phase-filter {
  margin: 30px;
  display: flex;
  justify-content: space-around;
}

ul.phase-list {
  overflow: auto;
  list-style-type: none;
}

ul.phase-list li {
  height: 22px;
  float: left;
  margin-right: 0px;
  border-right: 1px solid #aaa;
  padding: 0 20px;
}

ul.phase-list li:last-child {
  border-right: none;
}

ul.phase-list li a {
  text-decoration: none;
  color: #ccc;

  font-family:'Open Sans', sans-serif;
  font-size: 1.2em;
  text-transform: uppercase;

  -webkit-transition: all 0.2s ease;
  -moz-transition: all 0.2s ease;
  -o-transition: all 0.2s ease;
  -ms-transition: all 0.2s ease;
  transition: all 0.2s ease;
}

ul.phase-list li a:hover {
  color: #666;
}

ul.phase-list li.active a {
  font-weight: bold;
  color: #333;
}

/*Login*/

div.login{
  display: flex;
  align-items: center;

}

.login p{
  margin: 0px 15px;
  font-size: 1.5em;
}

.login-box{
  font-family: 'Open Sans', sans-serif;
  text-align: center;
  margin: 50px auto;
  background: #fafafa;
  max-width: 400px;
  min-height: 300px;
  border: 1px solid #E1E1E1;
  box-shadow: 2px 2px 3px 0 rgba(117, 124, 129, 0.12);
  -webkit-box-shadow: 2px 2px 3px 0 rgba(117, 124, 129, 0.12);
  -moz-box-shadow: 2px 2px 3px 0 rgba(117, 124, 129, 0.12);
}



.content{

  min-height: 100%;
}


.icon{
  font-size: 1em;
  cursor: pointer;
  text-align: center;
  margin: 0px 30px;
  display: block;

}

.unavailable span,
.unavailable p{
  color: #a3a3a3;
  cursor: default;
}

.icon p{
  display: inline;
  font-size: 1.5em;

}

div.icon:hover{
  color: #CDCDCD;
  transition: all 0.2s;

}

.icon span{
  display: block;
  font-size: 2em;
  margin-bottom: 0px;
}



form table{
  margin: 40px auto 20px auto;
}

div#idea-list{
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}

div.idea{
  /*
  -webkit-box-shadow: 0 .28571429rem 1.42857143rem rgba(79,79,79,.1);
  -moz-box-shadow: 0 .28571429rem 1.42857143rem rgba(79,79,79,.1);
  box-shadow: 0 .28571429rem 1.42857143rem rgba(79,79,79,.1);
  border: 1px solid #E5E5E5;   */
  border-radius: 14px;
  font-family: 'Open Sans', sans-serif;
  text-align: center;
  margin: 0 0 50px 0;
  padding: 15px;
  background: #fafafa;
  min-width: 560px;
  max-width: 560px;
  min-height: 300px;
  position: relative;
  border: 1px solid #E1E1E1;
   box-shadow: 2px 2px 3px 0 rgba(117, 124, 129, 0.12);
  -webkit-box-shadow: 2px 2px 3px 0 rgba(117, 124, 129, 0.12);
  -moz-box-shadow: 2px 2px 3px 0 rgba(117, 124, 129, 0.12);

}

.idea-header{
  display: flex;
  justify-content: space-between;
  align-items: center;
  border-bottom: 1px solid #E1E1E1;
  padding-bottom: 10px;
}

.idea-header h1{
  cursor: pointer;
  font-size: 1.6em;
}

.idea-header h1,
.idea-header p{
  margin: 0;

}

.date{
  font-size: 0.9em;
}

.idea-desc{
  text-align: left;
  margin-top: 20px;
  padding: 0 20px;
}

.bold{
  font-weight: bold;
}

.idea-footer{
  display: flex;
  justify-content: space-around;
  align-items: center;
  position: absolute;
  bottom: 0;
  margin: 0;
  width: 100%;
  border-top: 1px solid #E1E1E1;
  max-width: 524px;
  padding: 10px 0;



}

.idea-footer p{
  margin-bottom: 0;

}

.idea-footer .button-group button{
  background-color: #E1E1E1;border: 1px solid #AEAEAE;

}

.phase{
  display: flex;
  align-items: center;
}

.phase-name{
  font-size: 1.3em;
  font-weight: 400;
}

.phase-symbol{
  display: flex;
  width: 30px;
  height: 30px;
  border-radius: 9px;
  justify-content: center;
  align-items: center;
  margin-right: 5px;
  font-size: 1.6em;

}

.crescendo-phase{
 // background: #065B8D;
  color: #065B8D;

}

.avaliando-phase{
 // background: #D95578;
  color: #D95578;


}

.agindo-phase{
  color: #f68b2c;
}

.feita-phase{
  color: #BADA55;
}

.arquivada-phase{
  color: #726C69;
}

.phase-indicator{
  border-radius: 10px;

  width: 25px;
  height: 25px;
  margin-right: 5px;
}

.crescendo{
  border-left: 5px solid #065B8D !important;

}

.avaliando{
  border-left: 5px solid #D95578 !important;
}

.agindo{
  border-left: 5px solid #f68b2c !important;
}

.feita{
  border-left: 5px solid #BADA55 !important;
}

.arquivada{
  border-left: 5px solid #726C69 !important;
}

.like-menu{
  display: flex;
  align-items: center;
  font-size: 1.5em;
}


.like-menu p{
  display: inline;

  margin-bottom: 0;
  margin-left: -3px;
  font-size: 1.15em;

}


.liked,
.liked a{
  color: #00B238;
}

.disliked,
.disliked a{
  margin-left: 5px;
  color: #FF040099;
}

footer {
  background: #fafafa;
  border-top: 1px solid #E6E6E6;
  min-height: 60px;
  display: flex;
  align-items: center;
  justify-content: center;

  width: 100%;
  bottom: 0;
}

footer p {
  margin: 0;
}

.modal-dialog {
  margin-top: 200px;
}

#modal-idea-crud .modal-content {
  border-left: 5px solid #36aed3;
  font-family: 'Open Sans', sans-serif;
  padding: 0 10px 0 5px;
}

#modal-idea .idea {
  margin-left: 17px;
  margin-top: 25px;
}

.modal-header h4 {
    display: inline;
}

.modal-header svg{
    font-size: 2em;
    margin-right: 10px;
    color: #36aed3;
}

.modal-title {
  font-size: 1.6em;
}

.modal-body textarea {
  min-width: 540px;
  width: 100%;
  resize: none;
}


input#id_title {
  width: 100%;
}

.modal-body label {
  display: block;
}

.modal-footer button {
  background: #36aed3;
  border: 1px solid #36aed3;
  color: white;
  font-weight: bolder;
  font-size: 1.5em;
  -webkit-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.75);
-moz-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.75);
box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.75);

}

/*Landing Page*/

.brief-explanation{

  background: url("../images/lamp_idea_1-50.png");
    background-size: auto auto;
min-height: 450px;
background-size: cover;
text-align: center;
padding-top: 25px;
font-family: sans-serif;
background-position-y: 5%;
padding: 8% 15% 0 15%;

}

.brief-explanation h1{
  margin: 0;
  font-size: 4em;

}

.brief-explanation p{
  font-size: 2em;
}

.idea-launch{
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 30px 0;
  font-family: sans-serif;
}

.idea-launch .launch-text{
  max-width: 550px;
}

.launch-text h2{
  font-size: 2.5em;
  color: #5990A4;
}

.launch-text p{
  color: #666666;
  font-size: 1.1em;
}

.idea-launch *{
  margin: 0 50px;
}

.launch-text *{
  margin: 10px 0;
}

.functionality{
  background: url("../images/keyboard.jpg");
  width: 100%;
  min-height: 500px;
  background-size: cover;
  display: flex;
  justify-content: flex-end;;
  align-items: center;
}

.function-list{
  max-width: 1000px;
  padding-right: 100px;
  min-height: 500px;
  display: flex;
  flex-flow: column;
  justify-content: space-around;
  font-family: 'Open Sans', sans-serif;

}

.function-list h2,
.function-list h3{
  color: #5990A4;
}

.function-list p{
  font-size: 1.2em;
}

.why-info{
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: 550px;
}

footer.landing-page{
  min-height: 60px;
  background: #2D3F51;
  color: #E6E6E6;
}



@media (min-width: 321px) and (max-width: 480px) {
  .main-header {
    min-height: 150px;
    justify-content: space-around;
  }
  .login p {
    display: none;
  }
  .menu {
    //width: 65%;
    flex-basis: 100%;
    order: 1;
    margin-top: 20px;
  }
}

@media (min-width: 481px) and (max-width: 767px) {
  .main-header {
    min-height: 150px;
    justify-content: space-around;
  }
  .login p {
    display: none;
  }
  .menu {
    //width: 65%;
    flex-basis: 100%;
    order: 1;
    margin-top: 0px;
  }
}

@media (min-width: 768px) and (max-width: 1024px) {
  .main-header {
    min-height: 150px;
  }
  .icon {
    font-size: 0.8em;
  }
  .login p {
    display: none;
  }
  .menu {
    width: 65%;
  }
}

.like {
  color: #0014f2;
}

.dislike {
  color: #f20000;
}

.activeVote {
  font-weight: bold;
}

